--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5rem;">
             <div>
                 <div class="app-title">DEBATABLE</div>
-                <div class="app-subtitle">[ Excel for Debate // Real-Time Case Management ]</div>
+                <div class="app-subtitle">Real-Time Debate Organization</div>
             </div>
             <button class="btn" onclick="app.toggleTheme()" title="Toggle light/dark mode" style="padding: 0.5rem 0.8rem;">
                 <span id="themeIcon">☀️</span>
